--- a/slide/newSilde.html
+++ b/slide/newSilde.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>newSildeEva</title>
-    <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <style media="screen">
     /** {
